# QZTool

./: CMakeLists.txt  question.cpp  question.h
QZToolCore/: CMakeLists.txt  question.cpp  question.h  question_manager.cpp  question_manager.h
tests/: CMakeLists.txt  question_manager_test.cpp  question_test.cpp
